[tool.poetry]
name = "qftools"
version = "0.1.0"
description = "Quantitative Finance Tools"
authors = ["ReeceM <reece.miao@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "^2.1.3"
scipy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
flake8-bugbear = "^24.10.31"
numpydoc = "^1.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py312', 'py313']
